updated with new csv file

--- a/survey_analysis.Rmd
+++ b/survey_analysis.Rmd
@@ -108,15 +108,31 @@ tabyl(victoria_new_ID_gps$gps_checker) #checking to make sure that all of the GP
 write_csv(victoria_new_ID_gps, "victoria_new_ID_gps.csv") #writing CSV
 ```
 
-## Change to updated data frame to run once it gets fixed. Then do another markdown file to run the same analysis for the subset of participants who wore a Sensedoc.
-
 ## Descriptive Statistics 
+
+## Separating Birth Date into Year/Month/Day
+```{r}
+victoria_new_ID_gps <- separate(victoria_new_ID_gps, birth_date, c("year", "month", "day"), sep = "-")
+```
+
+## Adding new column for age
+```{r}
+victoria_new_ID_gps$year <- as.numeric(victoria_new_ID_gps$year)
+victoria_new_ID_gps <- mutate(victoria_new_ID_gps, "age_calculated" = 2017 - year)
+```
+
 ## Age descriptive Statistics for Victoria
 ```{r}
-summary(victoria_merged_filter$age_calculated, na.rm = TRUE)
-sd(victoria_merged_filter$age_calculated)
+summary(victoria_new_ID_gps$age_calculated, na.rm = TRUE)
+sd(victoria_new_ID_gps$age_calculated)
+```
 
-age_categories_plot <- ggplot (data = victoria_merged_filter, aes(age_categories)) + 
+## Age descriptive Statistics for Victoria
+```{r}
+summary(victoria_new_ID_gps$age_calculated, na.rm = TRUE)
+sd(victoria_new_ID_gps$age_calculated)
+
+age_categories_plot <- ggplot (data = victoria_new_ID_gps, aes(age_categories)) + 
     geom_bar() + 
         labs(title = "Age ", 
            x = "Age Categories", 
@@ -126,7 +142,7 @@ plot(age_categories_plot)
 
 ## Age histogram 
 ```{r}
-age_histogram <- ggplot (data = victoria_merged_filter, aes(age_calculated)) + 
+age_histogram <- ggplot (data = victoria_new_ID_gps, aes(age_calculated)) + 
     geom_histogram(aes(y = ..density..), color = "black", binwidth = 0.05) + 
       labs(title = "Barriers to Exercise ", 
           x = "Barriers to Exercise Score", 
@@ -134,12 +150,46 @@ age_histogram <- ggplot (data = victoria_merged_filter, aes(age_calculated)) +
 plot(age_histogram)
 ```
 
+## Age Categories (using stats can age groups)
+```{r}
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(age_categories = case_when(
+  age_calculated < 25 ~ "20-24",
+  age_calculated >= 25 & age_calculated <= 29 ~ "25-29",
+  age_calculated >= 30 & age_calculated <= 34 ~ "30-34", 
+  age_calculated >= 35 & age_calculated <= 39 ~ "35-39",
+  age_calculated >= 40 & age_calculated <= 44 ~ "40-44",
+  age_calculated >= 45 & age_calculated <= 49 ~ "45-49",
+  age_calculated >= 50 & age_calculated <= 54 ~ "50-54",
+  age_calculated >= 55 & age_calculated <= 59 ~ "55-59", 
+  age_calculated >= 60 & age_calculated <= 64 ~ "60-64",
+  age_calculated >= 65 & age_calculated <= 69 ~ "65-69",
+  age_calculated >= 70 & age_calculated <= 74 ~ "70-74", 
+  age_calculated >= 75 & age_calculated <= 79 ~ "75-79",
+  age_calculated >= 80 & age_calculated <= 84 ~ "80-84"
+))
+tabyl(victoria_new_ID_gps$age_categories)
+```
+
+## Gender Victoria
+```{r}
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(gender = case_when(
+  gender_vic_1.x == 1 & gender_vic_4.x == 1 ~ "Men",
+  gender_vic_1.x == 1 ~ "Men",
+  gender_vic_2.x == 1 ~ "Women", 
+  gender_vic_3.x == 1 ~ "Trans",
+  gender_vic_4.x == 1 ~ "LGBTQ+"
+)) #CHECK!!!!!!!!!!!
+##gender non-binary
+tabyl(victoria_new_ID_gps$gender)
+#victoria_new_ID_gps$gender <- factor(victoria_new_ID_gps$gender, c("Women", "Men", "Trans")) #not sure why I did this. 
+tabyl(victoria_new_ID_gps$gender)
+```
 
 ## Gender
 ```{r}
-tabyl(victoria_merged_filter$gender)
+tabyl(victoria_new_ID_gps$gender)
 
-gender_plot <- ggplot(data = victoria_merged_filter, aes(gender)) +
+gender_plot <- ggplot(data = victoria_new_ID_gps, aes(gender)) +
   geom_bar(aes(fill = gender)) +
   labs(title = "Gender",
        x = "Gender Type",
@@ -149,22 +199,157 @@ plot(gender_plot)
 
 ## Creating Gender in numbers for correlation
 ```{r}
-victoria_merged_filter <- victoria_merged_filter %>% mutate(gender_number = case_when(
-  gender_vic_1.x == 1 & gender_vic_4.x == 1 ~ "3",
-  gender_vic_1.x == 1 ~ "1",
-  gender_vic_2.x == 1 ~ "2", 
-  gender_vic_3.x == 1 ~ "3",
-  gender_vic_4.x == 1 ~ "3"
-)) 
-victoria_merged_filter$gender_number <- as.numeric(victoria_merged_filter$gender_number)
-tabyl(victoria_merged_filter$gender_number)
+#victoria_merged_filter <- victoria_merged_filter %>% mutate(gender_number = case_when(
+  #gender_vic_1.x == 1 & gender_vic_4.x == 1 ~ "3",
+  #gender_vic_1.x == 1 ~ "1",
+  #gender_vic_2.x == 1 ~ "2", 
+  #gender_vic_3.x == 1 ~ "3",
+  #gender_vic_4.x == 1 ~ "3"
+#)) 
+#victoria_merged_filter$gender_number <- as.numeric(victoria_merged_filter$gender_number)
+#tabyl(victoria_merged_filter$gender_number)
+
+##update this once you determine what exactly to do with gender
+```
+
+
+## Housing 
+```{r}
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(housing = case_when(
+  house_tenure == 1 ~ "Owner",
+  house_tenure == 2 ~ "Tenant", 
+  house_tenure == 3 ~ "Resident with friends or relatives",
+  house_tenure == 4 ~ "Resident not with friends or relatives", 
+  house_tenure == 5 ~ "Other"
+))
+
+victoria_new_ID_gps$housing <- factor(victoria_new_ID_gps$housing, c("Other", "Resident not with friends or relatives", "Resident with friends or relatives", "Tenant", "Owner")) 
+tabyl(victoria_new_ID_gps$housing)
+```
+
+## Table for housing and gender
+```{r}
+table(victoria_new_ID_gps$housing, victoria_new_ID_gps$gender)
+CrossTable(victoria_new_ID_gps$housing, victoria_new_ID_gps$gender)
+```
+
+## Dwelling Type 
+```{r}
+tabyl(victoria_new_ID_gps$dwelling_type)
+
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(housing_type = case_when(
+  dwelling_type == 1 ~ "Single-detached house",
+  dwelling_type == 2 ~ "Semi-detached house", 
+  dwelling_type == 3 ~ "Row house",
+  dwelling_type == 4 ~ "Apartment/Condo in a duplex or triplex", 
+  dwelling_type == 5 ~ "Apartment/Condo with fewer than 5 storeys",
+  dwelling_type == 6 ~ "Apartment/Condo with more than 5 storeys",
+  dwelling_type == 7 ~ "Mobile Home",
+  dwelling_type == 8 ~ "Seniors Home",
+  dwelling_type == 9 ~ "Other"
+))
+
+victoria_new_ID_gps$housing_type <- factor(victoria_new_ID_gps$housing_type, c("Other", "Seniors Home", "Mobile Home", "Apartment/Condo with more than 5 storeys", "Apartment/Condo with fewer than 5 storeys", "Apartment/Condo in a duplex or triplex", "Row house", "Semi-detached house", "Single-detached house" )) 
+tabyl(victoria_new_ID_gps$housing_type)
+```
+
+## Health Status
+```{r}
+tabyl(victoria_new_ID_gps$sf1)
+
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(health_status = case_when(
+  sf1 == 1 ~ "Excellent",
+  sf1 == 2 ~ "Very Good", 
+  sf1 == 3 ~ "Good",
+  sf1 == 4 ~ "Fair", 
+  sf1 == 5 ~ "Poor"
+))
+
+victoria_new_ID_gps$health_status <- factor(victoria_new_ID_gps$health_status, c("Poor", "Fair", "Good", "Very Good", "Excellent")) #WORKED - puts the graph in order
+tabyl(victoria_new_ID_gps$health_status)
+```
+
+## Health Status
+```{r}
+victoria_new_ID_gps$health_status <- factor(victoria_new_ID_gps$health_status, c("Poor", "Fair", "Good", "Very Good", "Excellent"))
+tabyl(victoria_new_ID_gps$health_status)
+
+health_plot <- ggplot(data = victoria_new_ID_gps, aes(health_status)) +
+  geom_bar() +
+  labs(title = "Health Status",
+       x = "Health Status",
+       y = "Number of Participants (n)") 
+plot(health_plot)
+```
+
+## Marital Status
+```{r}
+tabyl(victoria_new_ID_gps$marital_status)
+
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(marital = case_when(
+  marital_status == 1 ~ "Single (never married)",
+  marital_status == 2 ~ "Married (or common law)", 
+  marital_status == 3 ~ "Separated or divorced",
+  marital_status == 4 ~ "Widowed"
+))
+tabyl(victoria_new_ID_gps$marital)
+```
+
+## Marital Status
+```{r}
+marital_plot <- ggplot(data = victoria_new_ID_gps, aes(marital)) +
+  geom_bar() +
+  labs(title = "Marital Status",
+       x = "Marital Status",
+       y = "Number of Participants (n)") + theme(axis.text.x = element_text(angle=60, hjust=1))
+plot(marital_plot)
+```
+
+## Children (Yes/No)
+```{r}
+tabyl(victoria_new_ID_gps$children)
+
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(children_1 = case_when(
+  children == 1 ~ "Yes",
+  children == 2 ~ "No"
+))
+tabyl(victoria_new_ID_gps$children_1)
+```
+
+## Born in Canada
+```{r}
+tabyl(victoria_new_ID_gps$born_can)
+
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(born_canada = case_when(
+  born_can == 1 ~ "Yes",
+  born_can == 2 ~ "No"
+))
+tabyl(victoria_new_ID_gps$born_canada)
+```
+
+## Ethinic/Cultural Groups
+```{r}
+tabyl(victoria_new_ID_gps$group_id)
+
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(ethnicity = case_when(
+  group_id_1 == 1 & group_id_2 == 1 & group_id_4 == 1 ~ "Aboriginal",
+  group_id_1 == 1 & group_id_4 == 1 ~ "Aboriginal",
+  group_id_2 == 1 & group_id_4 == 1 ~ "Asian", 
+  group_id_4 == 1 & group_id_1 == 1 ~ "Aboriginal",
+  group_id_4 == 1 & group_id_6 == 1 ~ "Middle Eastern",
+  group_id_2 == 1 ~ "Asian",
+  group_id_4 == 1 ~ "Caucasian",
+  group_id_5 == 1 ~ "Latin American",
+  group_id_77 == 1 ~ "Unknown"
+)) ##RATIONALE FOR WHY YOU DID THIS THE WAY YOU DID!!!!
+
+victoria_new_ID_gps$ethnicity <- factor(victoria_new_ID_gps$ethnicity, c("Middle Eastern", "Latin American", "Aboriginal", "Asian", "Caucasian", "Unknown"))
+tabyl(victoria_new_ID_gps$ethnicity)
 ```
 
 ## Ethnicity 
 ```{r}
-tabyl(victoria_merged_filter$ethnicity)
-
-ethnicity_plot <- ggplot(data = victoria_merged_filter, aes(ethnicity)) +
+ethnicity_plot <- ggplot(data = victoria_new_ID_gps, aes(ethnicity)) +
   geom_bar() +
   labs(title = "Ethnicity",
        x = "Ethnic Group",
@@ -174,7 +359,7 @@ plot(ethnicity_plot)
 
 ## Ethnicity recoded as numbers for correlation
 ```{r}
-victoria_merged_filter <- victoria_merged_filter %>% mutate(ethnicity_number = case_when(
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(ethnicity_number = case_when(
   group_id_1 == 1 & group_id_2 == 1 & group_id_4 == 1 ~ "1",
   group_id_1 == 1 & group_id_4 == 1 ~ "1",
   group_id_2 == 1 & group_id_4 == 1 ~ "2", 
@@ -185,17 +370,37 @@ victoria_merged_filter <- victoria_merged_filter %>% mutate(ethnicity_number = c
   group_id_5 == 1 ~ "4",
   group_id_77 == 1 ~ "6"
 )) 
-victoria_merged_filter$ethnicity_number <- as.numeric(victoria_merged_filter$ethnicity_number)
+victoria_new_ID_gps$ethnicity_number <- as.numeric(victoria_new_ID_gps$ethnicity_number)
 ```
-
 
 ## Income
 ```{r}
-victoria_merged_filter$income_1 <- factor(victoria_merged_filter$income_1, c("No income", "$1 to $9,999", "$10,000 to $14,999", "$15,000 to $19,999", "$20,000 to $29,999", "$30,000 to $39,999", "$40,000 to $49,999","$50,000 to $99,999","$100,000 to $149,999","$150,000 to $199,999", "$200,000 or more", "I don't know/Prefer not to answer"))
-tabyl(victoria_merged_filter$income_1)
-summary(victoria_merged_filter$income)
+tabyl(victoria_new_ID_gps$income)
 
-income_plot <- ggplot(data = victoria_merged_filter, aes(income_1)) +
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(income_1 = case_when(
+  income == 1 ~ "No income",
+  income == 2 ~ "$1 to $9,999", 
+  income == 3 ~ "$10,000 to $14,999",
+  income == 4 ~ "$15,000 to $19,999", 
+  income == 5 ~ "$20,000 to $29,999",
+  income == 6 ~ "$30,000 to $39,999",
+  income == 7 ~ "$40,000 to $49,999",
+  income == 8 ~ "$50,000 to $99,999",
+  income == 9 ~ "$100,000 to $149,999",
+  income == 10 ~ "$150,000 to $199,999",
+  income == 11 ~ "$200,000 or more",
+  income == 77 ~ "I don't know/Prefer not to answer"
+))
+
+victoria_new_ID_gps$income_1 <- factor(victoria_new_ID_gps$income_1, c("No income", "$1 to $9,999", "$10,000 to $14,999", "$15,000 to $19,999", "$20,000 to $29,999", "$30,000 to $39,999", "$40,000 to $49,999","$50,000 to $99,999","$100,000 to $149,999","$150,000 to $199,999", "$200,000 or more", "I don't know/Prefer not to answer"))
+
+tabyl(victoria_new_ID_gps$income_1)
+summary(victoria_new_ID_gps$income)
+```
+
+## Income
+```{r}
+income_plot <- ggplot(data = victoria_new_ID_gps, aes(income_1)) +
   geom_bar() +
   labs(title = "Income",
        x = "Income Level",
@@ -203,42 +408,137 @@ income_plot <- ggplot(data = victoria_merged_filter, aes(income_1)) +
 plot(income_plot)
 ```
 
+## Income needs
+```{r}
+tabyl(victoria_new_ID_gps$income_needs)
+
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(income_satisfy = case_when(
+  income_needs == 1 ~ "Very well",
+  income_needs == 2 ~ "Well", 
+  income_needs == 3 ~ "Not so well",
+  income_needs == 4 ~ "Not at all", 
+  income_needs == 77 ~ "I don't know/Prefer not to answer"
+))
+
+tabyl(victoria_new_ID_gps$income_satisfy)
+```
+
 ## Income Needs
 ```{r}
-tabyl(victoria_merged_filter$income_satisfy)
+tabyl(victoria_new_ID_gps$income_satisfy)
 ```
 
-## Marital Status
+## Bicycle Facility Preference - Path 
 ```{r}
-tabyl(victoria_merged_filter$marital)
+tabyl(victoria_new_ID_gps$bike_comf_a)
 
-marital_plot <- ggplot(data = victoria_merged_filter, aes(marital)) +
-  geom_bar() +
-  labs(title = "Marital Status",
-       x = "Marital Status",
-       y = "Number of Participants (n)") + theme(axis.text.x = element_text(angle=60, hjust=1))
-plot(marital_plot)
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(path_comf = case_when(
+  bike_comf_a == 1 ~ "Very uncomfortable",
+  bike_comf_a == 2 ~ "Somewhat uncomfortable", 
+  bike_comf_a == 3 ~ "Somewhat comfortable",
+  bike_comf_a == 4 ~ "Very comfortable"
+))
+
+victoria_new_ID_gps$path_comf <- factor(victoria_new_ID_gps$path_comf, c("Very uncomfortable", "Somewhat comfortable", "Very comfortable"))
+
+tabyl(victoria_new_ID_gps$path_comf)
 ```
 
-## Health Status
+## Bicycle Facility Preference - Residential street 
 ```{r}
-victoria_merged_filter$health_status <- factor(victoria_merged_filter$health_status, c("Poor", "Fair", "Good", "Very Good", "Excellent"))
-tabyl(victoria_merged_filter$health_status)
+tabyl(victoria_new_ID_gps$bike_comf_b)
 
-health_plot <- ggplot(data = victoria_merged_filter, aes(health_status)) +
-  geom_bar() +
-  labs(title = "Health Status",
-       x = "Health Status",
-       y = "Number of Participants (n)") 
-plot(health_plot)
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(residential_street_comf = case_when(
+  bike_comf_b == 1 ~ "Very uncomfortable",
+  bike_comf_b == 2 ~ "Somewhat uncomfortable", 
+  bike_comf_b == 3 ~ "Somewhat comfortable",
+  bike_comf_b == 4 ~ "Very comfortable"
+))
+
+victoria_new_ID_gps$residential_street_comf <- factor(victoria_new_ID_gps$residential_street_comf, c("Very uncomfortable", "Somewhat uncomfortable", "Somewhat comfortable", "Very comfortable"))
+tabyl(victoria_new_ID_gps$residential_street_comf)
+```
+
+## Bicycle Facility Preference - Residential street with traffic calming measures
+```{r}
+tabyl(victoria_new_ID_gps$bike_comf_c)
+
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(res_street_traffic_calming_comf = case_when(
+  bike_comf_c == 1 ~ "Very uncomfortable",
+  bike_comf_c == 2 ~ "Somewhat uncomfortable", 
+  bike_comf_c == 3 ~ "Somewhat comfortable",
+  bike_comf_c == 4 ~ "Very comfortable",
+  bike_comf_c == 77 ~ "I don't know/Prefer not to answer"
+))
+
+victoria_new_ID_gps$res_street_traffic_calming_comf <- factor(victoria_new_ID_gps$res_street_traffic_calming_comf, c( "Very uncomfortable", "Somewhat uncomfortable", "Somewhat comfortable", "Very comfortable", "I don't know/Prefer not to answer"))
+tabyl(victoria_new_ID_gps$res_street_traffic_calming_comf)
+```
+
+## Bicycle Facility Preference - Major Street with no bike lane 
+```{r}
+tabyl(victoria_new_ID_gps$bike_comf_d)
+
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(major_street_no_bike_lane = case_when(
+  bike_comf_d == 1 ~ "Very uncomfortable",
+  bike_comf_d == 2 ~ "Somewhat uncomfortable", 
+  bike_comf_d == 3 ~ "Somewhat comfortable",
+  bike_comf_d == 4 ~ "Very comfortable"
+))
+
+victoria_new_ID_gps$major_street_no_bike_lane <- factor(victoria_new_ID_gps$major_street_no_bike_lane, c("Very uncomfortable", "Somewhat uncomfortable", "Somewhat comfortable", "Very comfortable"))
+tabyl(victoria_new_ID_gps$major_street_no_bike_lane)
+```
+
+## Bicycle Facility Preference - Major Street with bike lane 
+```{r}
+tabyl(victoria_new_ID_gps$bike_comf_e)
+
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(major_street_bike_lane = case_when(
+  bike_comf_e == 1 ~ "Very uncomfortable",
+  bike_comf_e == 2 ~ "Somewhat uncomfortable", 
+  bike_comf_e == 3 ~ "Somewhat comfortable",
+  bike_comf_e == 4 ~ "Very comfortable"
+))
+
+victoria_new_ID_gps$major_street_bike_lane <- factor(victoria_new_ID_gps$major_street_bike_lane, c("Very uncomfortable", "Somewhat uncomfortable", "Somewhat comfortable", "Very comfortable"))
+tabyl(victoria_new_ID_gps$major_street_bike_lane)
+```
+
+## Bicycle Facility Preference - Major Street with separated bike lane 
+```{r}
+tabyl(victoria_new_ID_gps$bike_comf_f)
+
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(major_street_separated_bike_lane = case_when(
+  bike_comf_f == 1 ~ "Very uncomfortable",
+  bike_comf_f == 2 ~ "Somewhat uncomfortable", 
+  bike_comf_f == 3 ~ "Somewhat comfortable",
+  bike_comf_f == 4 ~ "Very comfortable",
+  bike_comf_f == 77 ~ "I don't know/Prefer not to answer"
+))
+
+victoria_new_ID_gps$major_street_separated_bike_lane <- factor(victoria_new_ID_gps$major_street_separated_bike_lane, c( "Very uncomfortable", "Somewhat uncomfortable", "Somewhat comfortable", "Very comfortable", "I don't know/Prefer not to answer"))
+tabyl(victoria_new_ID_gps$major_street_separated_bike_lane)
 ```
 
 ## Support for AAA
+### AAA Familiarity 
+```{r}
+tabyl(victoria_new_ID_gps$aaa_familiarity)
+
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(aaa_familiarity_1 = case_when(
+  aaa_familiarity == 1 ~ "Yes",
+  aaa_familiarity == 2 ~ "No"
+))
+
+tabyl(victoria_new_ID_gps$aaa_familiarity_1)
+```
+
 ## Familiarity AAA
 ```{r}
-tabyl(victoria_merged_filter$aaa_familiarity_1)
+tabyl(victoria_new_ID_gps$aaa_familiarity_1)
 
-AAA_familiarity_plot <- ggplot(data = victoria_merged_filter, aes(aaa_familiarity_1)) +
+AAA_familiarity_plot <- ggplot(data = victoria_new_ID_gps, aes(aaa_familiarity_1)) +
   geom_bar() +
   labs(title = "All Ages and Abilities Cycling Network Familiarity",
        x = "Yes/No",
@@ -246,21 +546,34 @@ AAA_familiarity_plot <- ggplot(data = victoria_merged_filter, aes(aaa_familiarit
 plot(AAA_familiarity_plot)
 ```
 
-## AAA Familiarity - mutate 
+## AAA Familiarity - mutate #NOT SURE WHY I DID THIS. DON'T THINK IT's IMPORTANT 
 ```{r}
-victoria_merged_filter <- victoria_merged_filter %>% mutate(aaa_familiarity_2 = case_when(
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(aaa_familiarity_2 = case_when(
   aaa_familiarity_1 == "Yes" ~ "1",
   aaa_familiarity_1 == "No" ~ "0"
 ))
-tabyl(victoria_merged_filter$aaa_familiarity_2)
+tabyl(victoria_new_ID_gps$aaa_familiarity_2)
+```
+
+## AAA Good idea
+```{r}
+tabyl(victoria_new_ID_gps$aaa_idea)
+
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(aaa_idea_1 = case_when(
+  aaa_idea == 1 ~ "Very good idea",
+  aaa_idea == 2 ~ "Somewhat good idea",
+  aaa_idea == 3 ~ "Somewhat bad idea",
+  aaa_idea == 4 ~ "Very bad idea",
+  aaa_idea == 77 ~ "I don't know"
+))
+
+victoria_new_ID_gps$aaa_idea_1 <- factor(victoria_new_ID_gps$aaa_idea_1, c("I don't know", "Very bad idea", "Somewhat bad idea", "Somewhat good idea", "Very good idea"))
+tabyl(victoria_new_ID_gps$aaa_idea_1)
 ```
 
 ## AAA Idea
 ```{r}
-victoria_merged_filter$aaa_idea_1 <- factor(victoria_merged_filter$aaa_idea_1, c("I don't know", "Very bad idea", "Somewhat bad idea", "Somewhat good idea", "Very good idea"))
-tabyl(victoria_merged_filter$aaa_idea_1)
-
-AAA_idea_plot <- ggplot(data = victoria_merged_filter, aes(aaa_idea_1)) +
+AAA_idea_plot <- ggplot(data = victoria_new_ID_gps, aes(aaa_idea_1)) +
   geom_bar() +
   labs(title = "All Ages and Abilities Cycling Network Idea",
        x = "AAA Idea",
@@ -268,22 +581,21 @@ AAA_idea_plot <- ggplot(data = victoria_merged_filter, aes(aaa_idea_1)) +
 plot(AAA_idea_plot)
 ```
 
-## AAA Idea - mutate 
+## AAA Cycle More
 ```{r}
-victoria_merged_filter <- victoria_merged_filter %>% mutate(aaa_idea_2 = case_when(
-  aaa_idea_1 == "Very bad idea" ~ "0",
-  aaa_idea_1 == "Somewhat bad idea" ~ "0.5", 
-  aaa_idea_1 == "Somewhat good idea" ~ "0.5",
-  aaa_idea_1 == "Very good idea" ~ "1" 
+tabyl(victoria_new_ID_gps$aaa_bike_more)
+
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(aaa_bike_more_1 = case_when(
+  aaa_bike_more == 1 ~ "Yes",
+  aaa_bike_more == 2 ~ "No"
 ))
-tabyl(victoria_merged_filter$aaa_idea_2)
+
+tabyl(victoria_new_ID_gps$aaa_bike_more_1)
 ```
 
 ## AAA Bike More
 ```{r}
-tabyl(victoria_merged_filter$aaa_bike_more_1)
-
-AAA_bike_more_plot <- ggplot(data = victoria_merged_filter, aes(aaa_bike_more_1)) +
+AAA_bike_more_plot <- ggplot(data = victoria_new_ID_gps, aes(aaa_bike_more_1)) +
   geom_bar() +
   labs(title = "All Ages and Abilities Cycling Network Bike More",
        x = "AAA Bike More",
@@ -291,32 +603,10 @@ AAA_bike_more_plot <- ggplot(data = victoria_merged_filter, aes(aaa_bike_more_1)
 plot(AAA_bike_more_plot)
 ```
 
-## AAA Bike More - mutate 
-```{r}
-victoria_merged_filter <- victoria_merged_filter %>% mutate(aaa_bike_more_2 = case_when(
-  aaa_bike_more_1 == "Yes" ~ "1",
-  aaa_bike_more_1 == "No" ~ "0"
-))
-tabyl(victoria_merged_filter$aaa_bike_more_2)
-```
-
-## Preference for separated 
-```{r}
-tabyl(victoria_merged_filter$major_street_separated_bike_lane)
-
-victoria_merged_filter <- victoria_merged_filter %>% mutate(separated_bike_lane = case_when(
-  major_street_separated_bike_lane == "Somewhat comfortable" ~ "0.5",
-  major_street_separated_bike_lane == "Very comfortable" ~ "1",
-  major_street_separated_bike_lane == "Very uncomfortable" ~ "0",
-   major_street_separated_bike_lane == "Somewhat uncomfortable" ~ "0.5"
-))
-tabyl(victoria_merged_filter$separated_bike_lane)
-```
-
 ## Plotting separated 
 ```{r}
-victoria_merged_filter$major_street_separated_bike_lane <- factor(victoria_merged_filter$major_street_separated_bike_lane, c( "Very uncomfortable", "Somewhat uncomfortable", "Somewhat comfortable", "Very comfortable", "I don't know/Prefer not to answer"))
-separated_preference <- ggplot(data = victoria_merged_filter, aes(major_street_separated_bike_lane)) +
+victoria_new_ID_gps$major_street_separated_bike_lane <- factor(victoria_new_ID_gps$major_street_separated_bike_lane, c( "Very uncomfortable", "Somewhat uncomfortable", "Somewhat comfortable", "Very comfortable", "I don't know/Prefer not to answer"))
+separated_preference <- ggplot(data = victoria_new_ID_gps, aes(major_street_separated_bike_lane)) +
   geom_bar() +
   labs(title = "Preference for Major Street with Separated Bike Lane",
        x = "Level of Preference",
@@ -324,166 +614,119 @@ separated_preference <- ggplot(data = victoria_merged_filter, aes(major_street_s
 plot(separated_preference)
 ```
 
-## Creating index
-```{r}
-victoria_merged_filter$separated_bike_lane <- as.numeric(victoria_merged_filter$separated_bike_lane)
-victoria_merged_filter$aaa_bike_more_2 <- as.numeric(victoria_merged_filter$aaa_bike_more_2)
-victoria_merged_filter$aaa_familiarity_2 <- as.numeric(victoria_merged_filter$aaa_familiarity_2)
-victoria_merged_filter$aaa_idea_2 <- as.numeric(victoria_merged_filter$aaa_idea_2)
-
-victoria_merged_filter <- mutate(victoria_merged_filter, "support_index" = aaa_idea_2 + aaa_familiarity_2 + aaa_bike_more_2 + separated_bike_lane)
-tabyl(victoria_merged_filter$support_index)
-```
-
-## Plotting support index
-```{r}
-support_index_plot <- ggplot(data = victoria_merged_filter, aes(support_index)) +
-  geom_bar() +
-  labs(title = "All Ages and Abilities Cycling Network Support Index",
-       x = "Level of Support",
-       y = "Number of Participants (n)")
-plot(support_index_plot)
-```
-
-## Scatterplot 
-
-## Scatterplot analyzing support index and age 
-```{r}
-scatter_support_age <- ggplot(victoria_merged_filter, aes(support_index, age_calculated))
-
-scatter_support_age_1 <- scatter_support_age +
-                           geom_point() +
-                             labs(title = "Scatterplot of Age and Support Index for AAA",
-                               x = "Support Index for AAA", 
-                                y = "Age")
-plot(scatter_support_age_1)
-```
-
-## Spearman's Correlation Coefficient - Gender
-```{r}
-cor.test(victoria_merged_filter$support_index, victoria_merged_filter$gender_number, alternative = "less", method = "spearman")
-#not significant - no correlation (4%)
-```
-
-
-## Spearman's Correlation Coefficient - Age
-```{r}
-cor.test(victoria_merged_filter$support_index, victoria_merged_filter$age_calculated, alternative = "less", method = "spearman")
-#not significant - no correlation (-3.6%)
-```
-
-## Spearman's Correlation Coefficient - Health Status
-```{r}
-cor.test(victoria_merged_filter$support_index, victoria_merged_filter$sf1, alternative = "less", method = "spearman")
-# not significant - no correlation (-.6%)
-```
-
-## Spearman's Correlation Coefficient - Income 
-```{r}
-cor.test(victoria_merged_filter$support_index, victoria_merged_filter$income, alternative = "less", method = "spearman")
-# not significant - no correlation (9.6%)
-```
-
-## Spearman's Correlation Coefficient - Marital status
-```{r}
-cor.test(victoria_merged_filter$support_index, victoria_merged_filter$marital_status, alternative = "less", method = "spearman")
-# not significant - no correlation (5.7%)
-```
-
-## Spearman's Correlation Coefficient - Ethnicity
-```{r}
-cor.test(victoria_merged_filter$support_index, victoria_merged_filter$ethnicity_number, alternative = "less", method = "spearman")
-# not significant - no correlation (.04%)
-```
-
-## Spearman's Correlation Coefficient - Cycling MET-minutes of PA
-```{r}
-cor.test(victoria_merged_filter$support_index, victoria_merged_filter$Cycling_formula, alternative = "less", method = "spearman")
-# significant -12%
-```
-
-## Spearman's Correlation Coefficient - Cycling MET-minutes of PA and comfortable on separated
-```{r}
-cor.test(victoria_merged_filter$separated_bike_lane, victoria_merged_filter$Cycling_formula, alternative = "less", method = "spearman")
-# significant -14%
-```
-
 ## Attempting regression between support index and PA
 ```{r}
-support_regression <- lm(Cycling_formula ~ factor(support_index), data = victoria_merged_filter)
-summary(support_regression)
+#support_regression <- lm(Cycling_formula ~ factor(support_index), data = victoria_new_ID_gps)
+#summary(support_regression)
+#REGRESSION FOR LATER
 ```
 
 ## Checking self-report exposure
 ```{r}
-tabyl(victoria_merged_filter$vicroads_f)
+tabyl(victoria_new_ID_gps$vicroads_f)
 #86% bike on pandora 
 ```
 
 ## Self-report Physcial Activity Data - Total PA - Outcome Variable 
+
+## Physical Activity - Cycling 
+```{r}
+tabyl(victoria_new_ID_gps$travel_bike)
+victoria_new_ID_gps <- mutate(victoria_new_ID_gps, "Cycling_formula" = 6 * travel_bike_freq * travel_bike)
+victoria_new_ID_gps <- mutate(victoria_new_ID_gps, "Walking_formula" = 3.3 * travel_walk_freq * travel_walk)
+victoria_new_ID_gps <- mutate(victoria_new_ID_gps, "Total_transport_formula" = Cycling_formula + Walking_formula)
+```
+## Plotting PA
+```{r}
+PA_cycling_plot <- ggplot (data = victoria_new_ID_gps, aes(Cycling_formula)) + 
+    geom_density(aes(fill = gender), position = "dodge", alpha = 0.5) + 
+      labs(title = "Cycling for Transport Physical Activity", 
+          x = "Cycling MET Minutes of Physical Activity", 
+          y = "Percent of Participants")
+plot(PA_cycling_plot)
+```
+
+## Adding normal distribution to PA plot 
+```{r}
+victoria_new_ID_gps$Cycling_formula <- as.numeric(victoria_new_ID_gps$Cycling_formula)
+
+PA_cycling_normal_plot  <- PA_cycling_plot +
+  stat_function(fun = dnorm, args = list(mean = mean(victoria_new_ID_gps$Cycling_formula, na.rm = TRUE), sd =sd(victoria_new_ID_gps$Cycling_formula, na.rm = TRUE)), color = "red", size = 1)
+plot(PA_cycling_normal_plot)
+```
+
+## Descriptive Stats for Cycling PA
+```{r}
+summary(victoria_new_ID_gps$Cycling_formula)
+describeBy(victoria_new_ID_gps$Cycling_formula)
+describeBy(victoria_new_ID_gps$Cycling_formula, victoria_merged_filter$gender)
+
+tabyl(victoria_new_ID_gps$Cycling_formula)
+```
+
 ## Work - Vigorous 
 ```{r}
-victoria_merged_filter <- mutate(victoria_merged_filter, "work_formula" = 8 * work_vigpa * work_vigpa_freq)
-tabyl(victoria_merged_filter$work_formula)
+victoria_new_ID_gps <- mutate(victoria_new_ID_gps, "work_formula" = 8 * work_vigpa * work_vigpa_freq)
+tabyl(victoria_new_ID_gps$work_formula)
 ```
 
 ## Travel Walking 
 ```{r}
-victoria_merged_filter <- mutate(victoria_merged_filter, "travel_walk_formula" = 3.3 * travel_walk_freq * travel_walk)
-tabyl(victoria_merged_filter$travel_walk_formula)
+victoria_new_ID_gps <- mutate(victoria_new_ID_gps, "travel_walk_formula" = 3.3 * travel_walk_freq * travel_walk)
+tabyl(victoria_new_ID_gps$travel_walk_formula)
 ```
 
 ## Leisure Walking
 ```{r}
-victoria_merged_filter <- mutate(victoria_merged_filter, "leisure_walk_formula" = 3.3 * leisure_walk_freq * leisure_walk)
-tabyl(victoria_merged_filter$leisure_walk_formula)
+victoria_new_ID_gps <- mutate(victoria_new_ID_gps, "leisure_walk_formula" = 3.3 * leisure_walk_freq * leisure_walk)
+tabyl(victoria_new_ID_gps$leisure_walk_formula)
 ```
 
 ## Total Walking MET-minutes/week
 ```{r}
-victoria_merged_filter <- mutate(victoria_merged_filter, "total_walk_formula" = leisure_walk_formula + travel_walk_formula)
-tabyl(victoria_merged_filter$total_walk_formula)
+victoria_new_ID_gps <- mutate(victoria_new_ID_gps, "total_walk_formula" = leisure_walk_formula + travel_walk_formula)
+tabyl(victoria_new_ID_gps$total_walk_formula)
 ```
 
 ## Moderate Leisure
 ```{r}
-victoria_merged_filter <- mutate(victoria_merged_filter, "mod_leisure_formula" = 4* modpa_leisure_freq + modpa_leisure)
-tabyl(victoria_merged_filter$mod_leisure_formula)
+victoria_new_ID_gps <- mutate(victoria_new_ID_gps, "mod_leisure_formula" = 4* modpa_leisure_freq + modpa_leisure)
+tabyl(victoria_new_ID_gps$mod_leisure_formula)
 ```
 
 Vigorous Leisure
 ```{r}
-victoria_merged_filter <- mutate(victoria_merged_filter, "vig_leisure_formula" = 8* leisure_vigpa_freq + leisure_vigpa)
-tabyl(victoria_merged_filter$vig_leisure_formula)
+victoria_new_ID_gps <- mutate(victoria_new_ID_gps, "vig_leisure_formula" = 8* leisure_vigpa_freq + leisure_vigpa)
+tabyl(victoria_new_ID_gps$vig_leisure_formula)
 ```
 
 ## Total Leisure 
 ```{r}
-victoria_merged_filter <- mutate(victoria_merged_filter, "total_leisure_formula" = leisure_walk_formula + mod_leisure_formula + vig_leisure_formula)
-tabyl(victoria_merged_filter$total_leisure_formula)
+victoria_new_ID_gps <- mutate(victoria_new_ID_gps, "total_leisure_formula" = leisure_walk_formula + mod_leisure_formula + vig_leisure_formula)
+tabyl(victoria_new_ID_gps$total_leisure_formula)
 ```
 
 ## Total Moderate MET-minutes/week
 ```{r}
-victoria_merged_filter <- mutate(victoria_merged_filter, "total_moderate_met_formula" = mod_leisure_formula + Cycling_formula)
-tabyl(victoria_merged_filter$total_moderate_met_formula)
+victoria_new_ID_gps <- mutate(victoria_new_ID_gps, "total_moderate_met_formula" = mod_leisure_formula + Cycling_formula)
+tabyl(victoria_new_ID_gps$total_moderate_met_formula)
 ```
 
 ## Total Vigorous MET-minutes/week
 ```{r}
-victoria_merged_filter <- mutate(victoria_merged_filter, "total_vigorous_met_formula" = work_formula + vig_leisure_formula)
-tabyl(victoria_merged_filter$total_vigorous_met_formula)
+victoria_new_ID_gps <- mutate(victoria_new_ID_gps, "total_vigorous_met_formula" = work_formula + vig_leisure_formula)
+tabyl(victoria_new_ID_gps$total_vigorous_met_formula)
 ```
 
 ## Total physical activity MET-minutes/week
 ```{r}
-victoria_merged_filter <- mutate(victoria_merged_filter, "total_pa_met_formula" = total_leisure_formula + total_moderate_met_formula + total_vigorous_met_formula)
-tabyl(victoria_merged_filter$total_pa_met_formula)
+victoria_new_ID_gps <- mutate(victoria_new_ID_gps, "total_pa_met_formula" = total_leisure_formula + total_moderate_met_formula + total_vigorous_met_formula)
+tabyl(victoria_new_ID_gps$total_pa_met_formula)
 ```
 
 ## Plot 
 ```{r}
-PA_total_plot <- ggplot (data = victoria_merged_filter, aes(total_pa_met_formula)) + 
+PA_total_plot <- ggplot (data = victoria_new_ID_gps, aes(total_pa_met_formula)) + 
     geom_density() + theme_bw()
     
 plot(PA_total_plot)
@@ -491,12 +734,25 @@ plot(PA_total_plot)
 
 ##Determining the proportion of cycling PA in total PA
 ```{r}
-victoria_merged_filter <- mutate(victoria_merged_filter, "proportion_PA" = (Cycling_formula/total_pa_met_formula)*100)
-tabyl(victoria_merged_filter$proportion_PA)
+victoria_new_ID_gps <- mutate(victoria_new_ID_gps, "proportion_PA" = (Cycling_formula/total_pa_met_formula)*100)
+tabyl(victoria_new_ID_gps$proportion_PA)
 
-PA_proportion_plot <- ggplot (data = victoria_merged_filter, aes(proportion_PA)) + 
+PA_proportion_plot <- ggplot (data = victoria_new_ID_gps, aes(proportion_PA)) + 
     geom_density() + theme_bw()
     
 plot(PA_proportion_plot)
+```
+
+## Filter data to get just GPS participants 
+```{r}
+victoria_gps_only <- dplyr::filter(victoria_new_ID_gps, gps_checker == 1) #maybe should do this once all of the variables are added. come back and run at bottom
+tabyl(victoria_gps_only$gps_checker)
+##should also write a new csv with 1. all survey participants and 2. gps participants
+```
+
+## Write CSV
+```{r}
+write_csv(victoria_gps_only, "victoria_gps_only.csv")
+write_csv(victoria_new_ID_gps, "victoria_new_ID_gps.csv")
 ```
 
